Fix blank white space on the right

--- a/zapisy/assets/common/index.scss
+++ b/zapisy/assets/common/index.scss
@@ -1,6 +1,20 @@
 @import "variables";
 @import "~bootstrap/scss/bootstrap";
 
+html {
+  overflow-y: auto;
+  overflow-x: hidden;
+  font-size: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+.wrapper { 
+  overflow-x: hidden; 
+}
+
+
 .logo {
   background: #00709e;
 }
+
